welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:21: error: not found: value p
	p = ch.toInt litMessage();
        ^Array2:25: error: not found: value setBrosseCouleur
	setBrosseCouleur(k + p)
        ^